--- a/template/page.template
+++ b/template/page.template
@@ -13,7 +13,7 @@
 			<div id="wrapper">
 				@input(template/menu.content)
 
-				@inputcontent
+				@content()
 
 				@input(template/footer.content)
 			</div>
